fix(docs): scrolling on mobile safari

--- a/shared/header.css
+++ b/shared/header.css
@@ -107,62 +107,9 @@ body:not([class*="disableAnimation"]) .shared-header-btn {
 
 @media (max-width: 799px) {
   .shared-header {
-    --top: var(--spacer-px) * 12;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 100;
-    background-color: var(--color-background);
-    grid-auto-flow: row;
-    justify-content: stretch;
-    gap: 0.5rem;
-    padding-inline: 0;
-    padding-top: calc(var(--top));
-    padding-bottom: calc(var(--spacer-px) * 1);
-    width: 300px;
-    max-width: calc(100% - 2rem);
-    transition: clip-path 100ms linear;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    border: 1px solid var(--color-lineColor);
-    border-width: 0px 0px 1px 1px;
-  }
-
-  .shared-header.collapsed {
-    --h: 45px;
-    --w: 67px;
-    background-color: transparent;
-    clip-path: polygon(
-      calc(100% - var(--w)) 0,
-      100% 0,
-      100% var(--h),
-      calc(100% - var(--w)) var(--h)
-    );
-  }
-
-  .shared-header nav {
-    grid-auto-flow: row;
-    grid-gap: 0.5rem;
-  }
-
-  .shared-header__logo {
-    position: absolute;
-    top: calc(-50px);
-    right: 0;
-    padding: calc(var(--spacer-px) * 3);
+    display: none;
   }
 }
-
-/* .shared-header__new {
-  padding-left: calc(var(--spacer-px) * 2);
-  padding-right: calc(var(--spacer-px) * 3);
-  border: 1px solid var(--color-edgeHover);
-}
-
-.shared-header__new:hover,
-.shared-header__new:focus-visible,
-.shared-header__new:active {
-  background-color: hsla(var(--color-brandHsl), 1);
-} */
 
 .desktop-only {
   display: none;
@@ -176,4 +123,50 @@ body:not([class*="disableAnimation"]) .shared-header-btn {
   .mobile-only {
     display: none;
   }
+
+  .mobile-header__toggle,
+  .mobile-header {
+    display: none;
+  }
+}
+
+/* Mobile Header */
+
+.mobile-header__toggle {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: hsla(var(--color-overlayColor), 0);
+  padding: 10px;
+  font-size: 0;
+  z-index: 1;
+}
+
+.mobile-header__toggle svg path {
+  fill: var(--color-foreground);
+}
+
+.mobile-header__overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: hsla(var(--color-overlayColor), 0.5);
+  opacity: 0.5;
+  z-index: 100;
+}
+
+.mobile-header__content {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 300px;
+  max-width: calc(100% - 2rem);
+  background-color: var(--color-background);
+  z-index: 100;
+  padding: 10px;
+  padding-top: 50px;
+  overflow-y: auto;
 }
